--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: darkcyan;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.transform {
+  background-color: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* .keyframe {
+  background-color: burlywood;
+  animation-name: animation;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-timing-function: linear;
+} */
+
+.media {
+  background-color: palegoldenrod;
+}
+
+.box {
+  height: 200px;
+  width: 200px;
+}
+
+.list {
+  height: 0%;
+  transition: 1s;
+  overflow: hidden;
+}
+
+.show {
+  height: 100%;
+}
+
+@keyframes animation {
+  0% {
+    transform: rotate(0deg) translate(0px, 0px);
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    transform: rotate(270deg) translate(-55px, -13px);
   }
+  50% {
+    transform: rotate(180deg) translate(10000px, 0px);
+  }
+  75% {
+    transform: rotate(90deg) translate(100px, 100px);
+  }
+  100% {
+    transform: rotate(0deg) translate(0px, 0px);
+  }
+}
+
+@media screen and (max-width: 770px) {
 }
